jqm z-index fix (#187)

--- a/css/mobiscroll.scroller.jqm.css
+++ b/css/mobiscroll.scroller.jqm.css
@@ -2,9 +2,6 @@
 .jqm .dwo {
     background: none;
 }
-.jqm .dw {
-    z-index: 1003;
-}
 .jqm .dwv {
     position: static;
     width: auto;
